--- a/socket-app/src/app/app.component.css
+++ b/socket-app/src/app/app.component.css
@@ -1,13 +1,10 @@
-.messages{
-  height: 400px;
-  width: 100%;
-  color: #fcfcff ;
-  background-color: rgb(40, 85, 211);
 
+.messages{
+  height: 150px;
+  width: 100%;
   max-height: 100vh - 20px;
   overflow-y: auto;
 }
-
 .messages ul li {
   list-style-type: none !important;
 }
@@ -16,5 +13,9 @@
 #inputContainer {
   border: 1px solid gray;
   display: inline-block;
-  vertical-align: top;
+  vertical-align: bottom;
 }
+
+
+
+
